completed dice ex with input/view

--- a/src/main/resources/templates/dice.html
+++ b/src/main/resources/templates/dice.html
@@ -11,7 +11,8 @@
     <input type="text" name="input" id="input"/>
     <button type="submit">ROLL!</button>
 </form>
-<h3> You Guessed <span th:text="${guess}"/></h3>
+
+<h3> You Guessed <span th:text="${input}"/></h3>
 <h3> Dice rolled<span th:text="${num}"/></h3>
 <h3> <span th:text="${answer}"/></h3>
 
