--- a/src/main/resources/templates/partials/navbar.html
+++ b/src/main/resources/templates/partials/navbar.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
-<head>
+<head th:fragment="head">
     <meta charset="UTF-8">
     <title>navbar</title>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
 </head>
 <body>
-<navbar th:fragment="main-nav">
-    <ul>
-        <li>home</li>
-        <li>login</li>
-    </ul>
-</navbar>
+<nav th:fragment="navbar">
+    <nav class="navbar navbar-dark bg-dark">
+        <span class="navbar-text">My Navbar</span>
+    </nav>
+</nav>
 </body>
 </html>
