--- a/src/main/resources/templates/posts/show.html
+++ b/src/main/resources/templates/posts/show.html
@@ -2,9 +2,10 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>View Posts</title>
 </head>
 <body>
-
+    <h1 th:text="${title}"></h1>
+    <p th:text="${description}"></p>
 </body>
 </html>
