--- a/src/main/resources/templates/countdown.html
+++ b/src/main/resources/templates/countdown.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
-<head th:replace="partials :: head" />
+<head th:replace="partials :: head"></head>
 <body>
-<nav th:replace="partials :: main-nav" />
+<nav th:replace="partials :: main-nav"></nav>
 
 <!--Linked to DeimosController-->
 <h1><span th:text="${days}">0</span> days left in class!</h1>
