--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -2,25 +2,28 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Login</title>
+    <title>Create</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </head>
 <body>
 <nav th:include="partials/navbar :: navbar"></nav>
-
-<h1>Login</h1>
-
+<h1>Create User</h1>
+<h1 th:if="${alert}" class="text-red">All Fields Required</h1>
 <div class="row">
-    <form class="col s12" action="/login" method="post">
+    <form class="col s12" action="/posts/create" method="post">
         <div class="row">
             <div class="input-field col s6">
-                <input placeholder="Username" id="username" type="text" class="validate field" name="username">
-                <label for="username">Username: </label>
-                <input placeholder="****" id="password" type="text" class="validate field" name="password">
-                <label for="password">Password: </label>
-
+                <input placeholder="Title" id="title" type="text" class="validate field" name="title">
+                <label for="title">Title</label>
+            </div>
+            <div class="input-field col s6">
+                <input type="text" placeholder="Description"
+                       id="desciption" class="validate field" name="description">
+                <label for="desciption">Description</label>
+            </div>
+            <div class="row">
                 <button class="btn waves-effect waves-light" type="submit" name="action">
                     Submit
                 </button>
@@ -28,6 +31,8 @@
         </div>
     </form>
 </div>
+
+
 
 </body>
 </html>
