--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <title>Home</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </head>
 <body>
-
-<h1>Hello, <span th:text="${user}">User</span></h1>
-<h2>This is my homepage</h2>
-
+<!--partial-->
+<navbar th:replace="partials/navbar :: navbar"></navbar>
+<h1>Landing/Home</h1>
+<div th:replace="/partials/navbar :: footer"></div>
 </body>
 </html>
