--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -3,35 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <title>Create</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="/templates/partials/springblog.css">
+    <script src="/webjars/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+
 </head>
 <body>
-<nav th:include="partials/navbar :: navbar"></nav>
-<h1>Create User</h1>
-<h1 th:if="${alert}" class="text-red">All Fields Required</h1>
-<div class="row">
-    <form class="col s12" action="/posts/create" method="post">
-        <div class="row">
-            <div class="input-field col s6">
-                <input placeholder="Title" id="title" type="text" class="validate field" name="title">
-                <label for="title">Title</label>
-            </div>
-            <div class="input-field col s6">
-                <input type="text" placeholder="Description"
-                       id="desciption" class="validate field" name="description">
-                <label for="desciption">Description</label>
-            </div>
-            <div class="row">
-                <button class="btn waves-effect waves-light" type="submit" name="action">
-                    Submit
-                </button>
-            </div>
-        </div>
-    </form>
-</div>
+<div class="container">
 
+    <nav th:include="partials/navbar :: navbar"></nav>
+    <h1>Create Posts</h1>
+    <h1 th:if="${alert}" class="text-red">All Fields Required</h1>
+    <div class="row">
+        <form class="col s12" action="/posts/create" method="post">
+            <div class="row">
+                <div class="input-field col s6">
+                    <input placeholder="Title" id="title" type="text" class="validate field" name="title">
+                    <label for="title">Title</label>
+                </div>
+                <div class="input-field col s6">
+                    <input type="text" placeholder="Description"
+                           id="desciption" class="validate field" name="description">
+                    <label for="desciption">Description</label>
+                </div>
+                <div class="row">
+                    <button class="btn waves-effect waves-light" type="submit" name="action">
+                        Submit
+                    </button>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
 
 
 </body>
