--- a/src/main/resources/templates/partials/navbar.html
+++ b/src/main/resources/templates/partials/navbar.html
@@ -1,43 +1,65 @@
-<!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="en">
-<head th:fragment="head">
-    <meta charset="UTF-8">
-    <title>Roger's Blog</title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>
+<!--<!DOCTYPE html>-->
+<!--<html xmlns:th="http://www.thymeleaf.org" lang="en">-->
+<!--<head th:fragment="head">-->
+<!--    <meta charset="UTF-8">-->
+<!--    <title>Roger's Blog</title>-->
+<!--    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"-->
+<!--          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>-->
 
-</head>
-<body>
-<div th:fragment="navbar">
-    <nav class="navbar navbar-dark bg-dark">
-        <span class="navbar-text">My Navbar</span>
-    </nav>
-</div>
-</body>
-</html>
+<!--</head>-->
+<!--<body>-->
+<!--<div th:fragment="navbar">-->
+<!--    <nav class="navbar navbar-dark bg-dark">-->
+<!--        <span class="navbar-text">My Navbar</span>-->
+<!--    </nav>-->
+<!--</div>-->
+<!--</body>-->
+<!--</html>-->
 
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:fragment="head">
     <meta charset="UTF-8">
     <title>Roger</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="springblog.css">
+    <script src="/webjars/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+
 </head>
 <body>
-<nav th:fragment="navbar">
-    <div class="nav-wrapper">
-        <a href="#" class="brand-logo">Logo</a>
-        <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li><a href="/posts">All</a></li>
-            <li><a href="/">Home</a></li>
-        </ul>
-    </div>
+
+<!--<nav th:fragment="navbar">-->
+<!--    <div class="navbar nav-wrapper navbar-dark bg-dark fixed-top">-->
+<!--        <a href="/" class="navbar-brand">home</a>-->
+<!--        <ul class="ml-auto">-->
+<!--            <li><a href="/posts">Posts</a></li>-->
+<!--            <li><a href="/">Home</a></li>-->
+<!--        </ul>-->
+<!--    </div>-->
+<!--</nav>-->
+<nav th:fragment="navbar" class="navbar navbar-inverse navbar-fixed-top">
+
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Logo</a>
+        </div>
+        <div class="collapse navbar-collapse">
+            <ul class="nav navbar-nav pull-right">
+                <li class="active"><a href="#">Home</a></li>
+                <li><a href="#">Page</a></li>
+                <li><a href="#">Link</a></li>
+            </ul>
+        </div><!--/.nav-collapse -->
+
 </nav>
 
-
-<div class="pink" th:fragment="footer">
-    Footer</div>
+<div class="mt-auto" th:fragment="footer">
+    Footer
+</div>
 </body>
 </html>
