--- a/src/main/resources/templates/posts.html
+++ b/src/main/resources/templates/posts.html
@@ -3,19 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Posts</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="/templates/partials/springblog.css">
+    <script src="/webjars/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </head>
 <body>
 <nav th:include="partials/navbar :: navbar"></nav>
 
 <h1>All Posts</h1>
-<div class="row">
+<div class="row container">
     <div th:each="post : ${posts}">
-        <div class="card col s4 offset-s1">
+        <div class="card">
             <div class="card-body">
-                <div class="card-title pink darken-2 white-text">
+                <div class="card-title ">
                     <span th:text="${post.title}"/>
                 </div>
                 <p th:text="${post.description}"></p>
