--- a/src/main/resources/templates/posts/edit.html
+++ b/src/main/resources/templates/posts/edit.html
@@ -23,9 +23,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Edit</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>
+
+
 </head>
 <body>
 <nav th:include="partials/navbar :: navbar"></nav>
@@ -33,10 +34,10 @@
 <h1 th:if="${alert}" class="text-red">All Fields Required</h1>
 
 <div class="row" >
-    <form class="col s12" th:action="@{'/posts/edit/'+ ${post.id}}" method="post">
+    <form class="col-12" th:action="@{'/posts/edit/'+ ${post.id}}" method="post">
         <input type="number" th:value="${post.id}" name="id" hidden>
         <div class="row">
-            <div class="input-field col s6">
+            <div class="input-field col-6">
                 <input placeholder="Title" id="title" type="text" class="validate field" name="title"
                        th:value="${post.title}">
                 <label for="title">Title</label>
@@ -47,16 +48,16 @@
                 <label for="description">Description</label>
             </div>
             <div class="row">
-                <button class="btn waves-effect waves-light pink darken-2" type="submit" name="action">
+                <button class="btn btn-primary" type="submit" name="action">
                     Submit
                 </button>
                 <a th:href="@{'/posts/'+ ${post.id}}"
-                   class="btn waves-effect waves-light pink darken-2">Go Back</a>
+                   class="btn btn-primary">Go Back</a>
             </div>
         </div>
     </form>
 </div>
 
-
+<script src="/webjars/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </body>
 </html>
