working on routing create and delete.

--- a/src/main/resources/css/springblog.css
+++ b/src/main/resources/css/springblog.css
@@ -16,6 +16,9 @@ body {
   padding-top: 60px;
 }
 
+.navbar{
+  background-color: cadetblue; /*Not Working*/
+}
 
 .navbar-brand {font-size: 30px;}
 .navbar-toggle {margin: 13px 15px 13px 0;}
