--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -5,7 +5,7 @@
     <title>Create</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>
-    <link rel="stylesheet" href="/templates/partials/springblog.css">
+    <link rel="stylesheet" href="/css/springblog.css">
     <script src="/webjars/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
 </head>
@@ -14,9 +14,8 @@
 
     <nav th:include="partials/navbar :: navbar"></nav>
     <h1>Create Posts</h1>
-    <h1 th:if="${alert}" class="text-red">All Fields Required</h1>
     <div class="row">
-        <form class="col s12" action="/posts/create" method="post">
+        <form class="" action="/posts/create" method="post">
             <div class="row">
                 <div class="input-field col s6">
                     <input placeholder="Title" id="title" type="text" class="validate field" name="title">
