--- a/src/main/resources/templates/delete.html
+++ b/src/main/resources/templates/delete.html
@@ -5,7 +5,7 @@
     <title>Delete</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>
-    <link rel="stylesheet" href="/templates/partials/springblog.css">
+    <link rel="stylesheet" href="/css/springblog.css">
 
     <script src="/webjars/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
