--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,18 +1,19 @@
+
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>
-    <link rel="stylesheet" href="/templates/partials/springblog.css">
+    <link rel="stylesheet" href="/css/springblog.css">
     <script src="/webjars/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-
 </head>
 <body>
-<!--partial-->
-<navbar th:replace="partials/navbar :: navbar"></navbar>
-<h1>Landing/Home</h1>
-<div th:replace="/partials/navbar :: footer"></div>
+<nav th:include="partials/navbar :: navbar"></nav>
+<h1> this is a home page!</h1>
+
+
+
 </body>
 </html>
