--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,36 +1,25 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Login</title>
+    <meta charset="UTF-8" />
+    <title>Home</title>
+    <link rel="stylesheet" href="/css/springblog.css">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>
-    <link rel="stylesheet" href="/templates/partials/springblog.css">
     <script src="/webjars/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-
 </head>
 <body>
+
 <nav th:include="partials/navbar :: navbar"></nav>
+<h1> login page </h1>
+<h2> test </h2>
+<h1> test again</h1>
+<form action="/login" method="post">
+    <input type="text" name="username" id="username" class="field">
+    <input type="text" name="password" id="password" class="field">
+    <button type="submit">Submit</button>
+</form>
 
-<div></div>
-<h1>Login</h1>
-
-<div class="row">
-    <form class="col s12" action="/login" method="post">
-        <div class="row">
-            <div class="input-field col s6">
-                <input placeholder="Username" id="username" type="text" class="validate field" name="username">
-                <label for="username">Username: </label>
-                <input placeholder="****" id="password" type="text" class="validate field" name="password">
-                <label for="password">Password: </label>
-
-                <button class="btn waves-effect waves-light" type="submit" name="action">
-                    Submit
-                </button>
-            </div>
-        </div>
-    </form>
-</div>
 
 </body>
 </html>
