--- a/src/main/resources/templates/partials/navbar.html
+++ b/src/main/resources/templates/partials/navbar.html
@@ -23,7 +23,7 @@
     <title>Roger</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>
-    <link rel="stylesheet" href="springblog.css">
+    <link rel="stylesheet" href="../../css/springblog.css">
     <script src="/webjars/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
 </head>
@@ -46,13 +46,14 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Logo</a>
+            <a class="navbar-brand" href="/">home</a>
         </div>
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav pull-right">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="#">Page</a></li>
-                <li><a href="#">Link</a></li>
+                <li class="active"><a href="/posts">Index</a></li>
+                <li><a href="/posts/edit">Post Edit</a></li>
+                <li><a href="/posts/create">Create</a></li>
+                <li><a href="/posts/delete">Delete</a></li>
             </ul>
         </div><!--/.nav-collapse -->
 
