--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -1,25 +1,39 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
+    <link th:insert="partials/head :: head"></link>
+
     <meta charset="UTF-8">
-    <title>Posts Index</title>
+    <title>Index</title>
 </head>
 <body>
-<h1>POST INDEX</h1>
+<h1 class=""> showing all posts </h1>
+<hr>
 <br><br>
-<div th:each= "post : ${posts}">
-    <h3 th:text = "${post.title}"></h3>
-    <p th:text = "${post.description}"></p>
-    <form action="/posts/edit" method="get">
-        <input type="hidden" name="postTitle" th:value="${post.getTitle()}">
-        <input type="hidden" name="postDescription" th:value="${post.getDescription()}">
-        <input type="hidden" name="postId" th:value="${post.getId()}">
-        <input type="submit" value="Edit This Post">
-    </form>
-    <form action="/posts/delete" method="post">
-        <input type="hidden" name="postId" th:value="${post.getId()}">
-        <input type="submit" value="Delete This Post">
-    </form>
+<div class="d-flex flex-wrap">
+
+    <div th:each="post : ${posts}" class="">
+        <div class="">
+            <h3 th:text="${post.title}" class=""></h3>
+            <p th:text="${post.body}"></p>
+
+            <form action="/posts/edit" method="get">
+                <input type="hidden" name="postTitle" th:value="${post.getTitle()}">
+                <input type="hidden" name="postBody" th:value="${post.getBody()}">
+                <input type="hidden" name="postId" th:value="${post.getId()}">
+                <input type="submit" value="Edit This Post">
+            </form>
+            <form action="/posts/delete" method="post">
+                <input type="hidden" name="postId" th:value="${post.getId()}">
+                <input type="submit" value="Delete This Post">
+            </form>
+            <br><br>
+
+
+        </div>
+    </div>
+
+    <!--    need to end before this div(ancestor)-->
 </div>
 
 </body>
