--- a/src/main/resources/templates/posts/show.html
+++ b/src/main/resources/templates/posts/show.html
@@ -2,10 +2,17 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>View Posts</title>
+    <title>Show</title>
 </head>
 <body>
-    <h1 th:text="${title}"></h1>
-    <p th:text="${description}"></p>
+
+<h1>single post</h1>
+
+<h3 th:text="${post.title}"></h3>
+<h5 th:text="${post.body}"></h5>
+
+
+
+
 </body>
 </html>
