--- a/src/main/resources/templates/singlePost.html
+++ b/src/main/resources/templates/singlePost.html
@@ -5,18 +5,18 @@
     <title>One</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>
-    <link rel="stylesheet" href="/templates/partials/springblog.css">
+    <link rel="stylesheet" href="/css/springblog.css">
     <script src="/webjars/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </head>
 <body>
 <nav th:include="partials/navbar :: navbar"></nav>
 <div class="row">
-    <div class="card col s4 offset-s4 pink">
+    <div class="">
         <div class="card-body">
             <div class="card-title">
                 <h1 class="white-text"><span th:text="${post.title}">holder</span></h1>
             </div>
-            <div class="card-text" th:text="${post.description}"></div>
+            <div class="card-text" th:text="${post.body}"></div>
             <div class="card-action">
                 <a th:href="@{'/posts/edit/'+ ${post.id}}">Edit Post</a>
                 <a th:href="@{'/posts/delete/'+ ${id}}" >Delete post</a>
