--- a/src/main/resources/templates/posts.html
+++ b/src/main/resources/templates/posts.html
@@ -1,34 +1,34 @@
-<!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>Posts</title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>
-    <link rel="stylesheet" href="/css/springblog.css">
-    <script src="/webjars/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-</head>
-<body>
-<nav th:include="partials/navbar :: navbar"></nav>
+<!--<!DOCTYPE html>-->
+<!--<html lang="en" xmlns:th="http://www.thymeleaf.org">-->
+<!--<head>-->
+<!--    <meta charset="UTF-8">-->
+<!--    <title>Posts</title>-->
+<!--    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"-->
+<!--          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>-->
+<!--    <link rel="stylesheet" href="/css/springblog.css">-->
+<!--    <script src="/webjars/bootstrap/3.3.6/js/bootstrap.min.js"></script>-->
+<!--</head>-->
+<!--<body>-->
+<!--<nav th:include="partials/navbar :: navbar"></nav>-->
 
-<h1>All Posts</h1>
-<div class="row container">
-    <div th:each="post : ${posts}">
-        <div class="card">
-            <div class="card-body">
-                <div class="card-title ">
-                    <span th:text="${post.title}"/>
-                </div>
-                <p th:text="${post.description}"></p>
-                <div class="card-action">
-                    <a th:href="@{'/posts/'+ ${post.id}}">View Post</a>
-                    <a th:href="@{'/posts/edit/'+ ${post.id}}" >Edit Post</a>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+<!--<h1>All Posts</h1>-->
+<!--<div class="row container">-->
+<!--    <div th:each="post : ${posts}">-->
+<!--        <div class="card">-->
+<!--            <div class="card-body">-->
+<!--                <div class="card-title ">-->
+<!--                    <span th:text="${post.title}"/>-->
+<!--                </div>-->
+<!--                <p th:text="${post.body}"></p>-->
+<!--                <div class="card-action">-->
+<!--                    <a th:href="@{'/posts/'+ ${post.id}}">View Post</a>-->
+<!--                    <a th:href="@{'/posts/edit/'+ ${post.id}}" >Edit Post</a>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
 
 
-</body>
-</html>
+<!--</body>-->
+<!--</html>-->
