--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -5,35 +5,59 @@
 
     <meta charset="UTF-8">
     <title>Index</title>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="/css/springblog.css">
+    <script src="/webjars/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </head>
 <body>
-<h1 class=""> showing all posts </h1>
+<nav th:include="partials/navbar :: navbar"></nav>
+
+<h1 class=""> showing all posts index.html </h1>
 <hr>
 <br><br>
-<div class="d-flex flex-wrap">
+<div class="d-flex flex-wrap container">
 
     <div th:each="post : ${posts}" class="">
         <div class="">
             <h3 th:text="${post.title}" class=""></h3>
             <p th:text="${post.body}"></p>
+            <div class="row">
+                <a th:href="@{'/posts/'+ ${post.id}}">
+                    <button>View Post</button>
+                </a>
+                <form action="/posts/edit" method="get">
+                    <input type="hidden" name="postTitle" th:value="${post.getTitle()}">
+                    <input type="hidden" name="postBody" th:value="${post.getBody()}">
+                    <input type="hidden" name="postId" th:value="${post.getId()}">
+                    <input type="submit" value="Edit This Post">
+                </form>
+                <form action="/posts/delete" method="post">
+                    <input type="hidden" name="postId" th:value="${post.getId()}">
+                    <input type="submit" value="Delete This Post">
+                </form>
 
-            <form action="/posts/edit" method="get">
-                <input type="hidden" name="postTitle" th:value="${post.getTitle()}">
-                <input type="hidden" name="postBody" th:value="${post.getBody()}">
-                <input type="hidden" name="postId" th:value="${post.getId()}">
-                <input type="submit" value="Edit This Post">
-            </form>
-            <form action="/posts/delete" method="post">
-                <input type="hidden" name="postId" th:value="${post.getId()}">
-                <input type="submit" value="Delete This Post">
-            </form>
+            </div>
             <br><br>
-
-
         </div>
     </div>
 
-    <!--    need to end before this div(ancestor)-->
+    <div class="row container">
+        <div th:each="post : ${posts}">
+            <div class="card">
+                <div class="card-body">
+                    <div class="card-title ">
+                        <span th:text="${post.title}"/>
+                    </div>
+                    <p th:text="${post.body}"></p>
+                    <div class="card-action">
+                        <a th:href="@{'/posts/'+ ${post.id}}">View Post</a>
+                        <a th:href="@{'/posts/edit/'+ ${post.id}}">Edit Post</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
 </body>
