--- a/src/main/resources/templates/singlePost.html
+++ b/src/main/resources/templates/singlePost.html
@@ -18,8 +18,24 @@
             </div>
             <div class="card-text" th:text="${post.body}"></div>
             <div class="card-action">
-                <a th:href="@{'/posts/edit/'+ ${post.id}}">Edit Post</a>
-                <a th:href="@{'/posts/delete/'+ ${id}}" >Delete post</a>
+
+<!--                would like to get these to work-->
+<!--                <a th:href="@{'/posts/edit/'+ ${post.id}}">Edit Post</a>-->
+<!--                <a th:href="@{'/posts/delete/'+ ${id}}" >Delete post</a>-->
+
+                <form action="/posts/edit" method="get">
+                    <input type="hidden" name="postTitle" th:value="${post.getTitle()}">
+                    <input type="hidden" name="postBody" th:value="${post.getBody()}">
+                    <input type="hidden" name="postId" th:value="${post.getId()}">
+                    <input type="submit" value="Edit This Post">
+                </form>
+                <form action="/posts/delete" method="post">
+                    <input type="hidden" name="postId" th:value="${post.getId()}">
+                    <input type="submit" value="Delete This Post">
+                </form>
+
+
+
             </div>
         </div>
 
