--- a/src/main/resources/templates/singlePost.html
+++ b/src/main/resources/templates/singlePost.html
@@ -10,7 +10,8 @@
 </head>
 <body>
 <nav th:include="partials/navbar :: navbar"></nav>
-<div class="row">
+
+<div class="container">
     <div class="">
         <div class="card-body">
             <div class="card-title">
