--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -12,51 +12,53 @@
 </head>
 <body>
 <nav th:include="partials/navbar :: navbar"></nav>
+<div class="container">
+    <h1 class=""> showing all posts index.html </h1>
+    <hr>
+    <br><br>
+    <div class="d-flex flex-wrap">
 
-<h1 class=""> showing all posts index.html </h1>
-<hr>
-<br><br>
-<div class="d-flex flex-wrap container">
+        <div th:each="post : ${posts}" class="">
+            <div class="">
+                <h3 th:text="${post.title}" class=""></h3>
+                <p th:text="${post.description}"></p>
+                <div class="row">
+                    <a th:href="@{'/posts/'+${post.id}+'/details'}">
+                        <button>View Post</button>
+                    </a>
+                    <form action="/posts/edit" method="get">
+                        <input type="hidden" name="postTitle" th:value="${post.getTitle()}">
+                        <input type="hidden" name="postBody" th:value="${post.getDescription()}">
+                        <input type="hidden" name="postId" th:value="${post.getId()}">
+                        <input type="submit" value="Edit This Post">
+                    </form>
+                    <form action="/posts/delete" method="post">
+                        <input type="hidden" name="postId" th:value="${post.getId()}">
+                        <input type="submit" value="Delete This Post">
+                    </form>
 
-    <div th:each="post : ${posts}" class="">
-        <div class="">
-            <h3 th:text="${post.title}" class=""></h3>
-            <p th:text="${post.body}"></p>
-            <div class="row">
-                <a th:href="@{'/posts/'+ ${post.id}}">
-                    <button>View Post</button>
-                </a>
-                <form action="/posts/edit" method="get">
-                    <input type="hidden" name="postTitle" th:value="${post.getTitle()}">
-                    <input type="hidden" name="postBody" th:value="${post.getBody()}">
-                    <input type="hidden" name="postId" th:value="${post.getId()}">
-                    <input type="submit" value="Edit This Post">
-                </form>
-                <form action="/posts/delete" method="post">
-                    <input type="hidden" name="postId" th:value="${post.getId()}">
-                    <input type="submit" value="Delete This Post">
-                </form>
-
+                </div>
+                <br><br>
             </div>
-            <br><br>
         </div>
-    </div>
 
-    <div class="row container">
-        <div th:each="post : ${posts}">
-            <div class="card">
-                <div class="card-body">
-                    <div class="card-title ">
-                        <span th:text="${post.title}"/>
-                    </div>
-                    <p th:text="${post.body}"></p>
-                    <div class="card-action">
-                        <a th:href="@{'/posts/'+ ${post.id}}">View Post</a>
-                        <a th:href="@{'/posts/edit/'+ ${post.id}}">Edit Post</a>
+        <div class="row">
+            <div th:each="post : ${posts}">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="card-title ">
+                            <span th:text="${post.title}"/>
+                        </div>
+                        <p th:text="${post.description}"></p>
+                        <div class="card-action">
+                            <a th:href="@{'/posts/'+ ${post.id}}">View Post</a>
+                            <a th:href="@{'/posts/edit/'+ ${post.id}}">Edit Post</a>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
+
     </div>
 </div>
 
