--- a/src/main/resources/templates/partials/head.html
+++ b/src/main/resources/templates/partials/head.html
@@ -13,10 +13,10 @@
 <div th:fragment="head">
     <!--    <link th:fragment="head" rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">-->
     <!--    <link th:fragment="head" rel="stylesheet" href="../../css/forms.css">-->
-    <link rel="stylesheet" href="../css/forms.css">
-    <link rel="stylesheet" href="/css/forms.css">
+    <link rel="stylesheet" href="../../static/forms.css">
+    <link rel="stylesheet" href="/static/forms.css">
 
-    <link rel="stylesheet" href="./../css/forms.css">
+    <link rel="stylesheet" href="../../static/forms.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
