--- a/src/main/resources/templates/posts/show.html
+++ b/src/main/resources/templates/posts/show.html
@@ -7,31 +7,36 @@
     <title>Index</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>
-    <link rel="stylesheet" href="/css/springblog.css">
+    <link rel="stylesheet" href="/static/springblog.css">
     <script src="/webjars/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </head>
 <body>
 <nav th:include="partials/navbar :: navbar"></nav>
+<div class="container">
 
 <h1>single post</h1>
 
 <h3 th:text="${post.title}"></h3>
 <h5 th:text="${post.description}"></h5>
+<h5 th:text="${post.user.username}"></h5>
 
 
+    <th:block th:if="${post.postDetails != null}">
     <h3 th:text="${post.postDetails.topicDescription}"></h3>
     <p>History of post:
         <span th:text="${post.postDetails.historyOfPost}"></span>
     </p>
+    </th:block>
 
-<div style="display: flex; flex-wrap: wrap">
-    <div th:each="image : ${post.images}">
-        <div>
-            <img th:src="${image.url}" style="height: 300px; margin-left: 10px; margin-right: 10px;"/>
-        </div>
-    </div>
 </div>
 
+<!--<div style="display: flex; flex-wrap: wrap">-->
+<!--    <div th:each="image : ${post.images}">-->
+<!--        <div>-->
+<!--            <img th:src="${image.url}" style="height: 300px; margin-left: 10px; margin-right: 10px;"/>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
 
 
 </body>
