--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -1,35 +1,32 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
+<!--<head th:replace="partials/head :: head('Create')"></head>-->
 <head>
-    <meta charset="UTF-8">
+    <th:block th:insert="partials/head :: head"></th:block>
     <title>Create</title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>
-    <link rel="stylesheet" href="/static/springblog.css">
-    <script src="/webjars/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-
 </head>
 <body>
-<div class="container">
-
+<div class="wrapper">
     <nav th:include="partials/navbar :: navbar"></nav>
-    <h1>Create Posts</h1>
-    <div class="row">
-        <form class="" action="/posts/create" method="post">
+
+    <header class="container my-5">
+        <div class="jumbotron">
+            <h1 class="text-center display-1">Create a Post:</h1>
+        </div>
+    </header>
+        <form class="container bg-light" th:action="@{/posts/create}" method="post" th:object="${post}">
             <div class="row">
                 <div class="input-field col s6">
-                    <input placeholder="Title" id="title" type="text" class="validate field" name="title">
                     <label for="title">Title</label>
+                    <input th:placeholder="Title" id="title" type="text" th:field="*{title}">
                 </div>
                 <div class="input-field col s6">
-                    <input type="text" placeholder="Description"
-                           id="desciption" class="validate field" name="description">
-                    <label for="desciption">Description</label>
+                    <label for="description">Description</label>
+                    <input th:placeholder="Description" id="description" type="text"
+                           th:field="*{description}">
                 </div>
-
-
                 <div class="row">
-                    <button class="btn waves-effect waves-light" type="submit" name="action">
+                    <button class="btn btn-primary" type="submit" name="action">
                         Submit
                     </button>
                 </div>
