--- a/src/main/resources/templates/delete.html
+++ b/src/main/resources/templates/delete.html
@@ -1,14 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Delete</title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>
-    <link rel="stylesheet" href="/static/springblog.css">
-
-    <script src="/webjars/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-
+    <th:block th:insert="partials/head :: head"></th:block>
 </head>
 <body>
 <nav th:include="partials/navbar :: navbar"></nav>
