--- a/src/main/resources/templates/partials/head.html
+++ b/src/main/resources/templates/partials/head.html
@@ -10,14 +10,18 @@
 
 <!--</body>-->
 <!--links for head-->
-<div th:fragment="head">
-    <!--    <link th:fragment="head" rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">-->
-    <!--    <link th:fragment="head" rel="stylesheet" href="../../css/forms.css">-->
-    <link rel="stylesheet" href="../../static/forms.css">
-    <link rel="stylesheet" href="/static/forms.css">
-
-    <link rel="stylesheet" href="../../static/forms.css">
+<th:block th:fragment="head">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
-    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
-</div>
+<!--    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" -->
+<!--          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">-->
+<!--    <link rel="stylesheet" href="/css/springblog.css">-->
+<!--    <script src="/webjars/bootstrap/3.3.6/js/bootstrap.min.js"></script>-->
+
+
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="/css/springblog.css">
+    <script src="/webjars/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+<!--    <link rel="stylesheet" href="/static/css/springblog.css">-->
+
+</th:block>
