--- a/src/main/resources/templates/partials/navbar.html
+++ b/src/main/resources/templates/partials/navbar.html
@@ -1,45 +1,12 @@
-<!--<!DOCTYPE html>-->
-<!--<html xmlns:th="http://www.thymeleaf.org" lang="en">-->
-<!--<head th:fragment="head">-->
-<!--    <meta charset="UTF-8">-->
-<!--    <title>Roger's Blog</title>-->
-<!--    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"-->
-<!--          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>-->
-
-<!--</head>-->
-<!--<body>-->
-<!--<div th:fragment="navbar">-->
-<!--    <nav class="navbar navbar-dark bg-dark">-->
-<!--        <span class="navbar-text">My Navbar</span>-->
-<!--    </nav>-->
-<!--</div>-->
-<!--</body>-->
-<!--</html>-->
-
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:fragment="head">
-    <meta charset="UTF-8">
-    <title>Roger</title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>
-    <link rel="stylesheet" href="../../static/springblog.css">
-    <script src="/webjars/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-
+<head>
+    <th:block th:insert="partials/head :: head"></th:block>
+    <title>Create</title>
 </head>
 <body>
 
-<!--<nav th:fragment="navbar">-->
-<!--    <div class="navbar nav-wrapper navbar-dark bg-dark fixed-top">-->
-<!--        <a href="/" class="navbar-brand">home</a>-->
-<!--        <ul class="ml-auto">-->
-<!--            <li><a href="/posts">Posts</a></li>-->
-<!--            <li><a href="/">Home</a></li>-->
-<!--        </ul>-->
-<!--    </div>-->
-<!--</nav>-->
 <nav th:fragment="navbar" class="navbar navbar-inverse navbar-fixed-top">
-
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                 <span class="icon-bar"></span>
@@ -51,9 +18,7 @@
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav pull-right">
                 <li class="active"><a href="/posts">Index</a></li>
-                <li><a href="/posts/edit">Post Edit</a></li>
                 <li><a href="/posts/create">Create</a></li>
-                <li><a href="/posts/delete">Delete</a></li>
             </ul>
         </div><!--/.nav-collapse -->
 
