--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -7,38 +7,42 @@
     <title>Index</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>
-    <link rel="stylesheet" href="../static/springblog.css">
+    <link rel="stylesheet" href="../../static/css/springblog.css">
     <script src="/webjars/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </head>
 <body>
 <nav th:include="partials/navbar :: navbar"></nav>
-<div class="container">
-    <h1 class=""> showing all posts index.html </h1>
+<div class="container d-flex">
+    <h1 class="d-flex ml-auto bg-primary"> showing all posts index.html </h1>
     <hr>
     <br><br>
-    <div class="d-flex flex-wrap">
-        <div th:each="post : ${posts}" class="">
+<!--    <div class="">-->
+
+        <div th:each="post : ${posts}" class="card">
             <div class="">
-                <h3 th:text="${post.title}" class=""></h3>
-                <p th:text="${post.description}"></p>
-                <div class="row">
-                    <a th:href="@{'/posts/'+${post.id}+'/details'}">
-                        <button>View Post</button>
-                    </a>
-                    <form action="/posts/edit" method="get">
-                        <input type="hidden" name="postTitle" th:value="${post.getTitle()}">
-                        <input type="hidden" name="postBody" th:value="${post.getDescription()}">
-                        <input type="hidden" name="postId" th:value="${post.getId()}">
-                        <input type="submit" value="Edit This Post">
-                    </form>
-                    <form action="/posts/delete" method="post">
-                        <input type="hidden" name="postId" th:value="${post.getId()}">
-                        <input type="submit" value="Delete This Post">
-                    </form>
+                <a th:text="${post.title}" class="card-title"></a>
+                <div class="card-body">
+                    <p th:text="${post.description}"></p>
+                    <div class="row">
+                        <a th:href="@{'/posts/'+${post.id}+'/details'}">
+                            <button>View Post</button>
+                        </a>
+                        <form th:action="@{/posts/edit}" th:method="get" th:object="${post}">
+                            <input type="hidden" name="id" th:value="${post.getId()}">
+                            <input type="submit" value="Edit This Post">
+                        </form>
+                        <form action="/posts/delete" method="post">
+                            <input type="hidden" name="postId" th:value="${post.getId()}">
+                            <input type="submit" value="Delete This Post">
+                        </form>
+                    </div>
                 </div>
-            </div></div>
+            </div>
         </div>
-    <br><hr><br>
+<!--    </div>-->
+    <br>
+    <hr>
+    <br>
     <div th:each="user : ${users}">
         <h3 th:text="${user.username}"></h3>
         <h3 th:text="${user.email}"></h3>
