stlying edit page

--- a/src/main/resources/templates/posts/edit.html
+++ b/src/main/resources/templates/posts/edit.html
@@ -20,42 +20,42 @@
         </div>
     </header>
 
-<!--    <form action="/posts/edit" method="post">-->
-<!--        <div class="form-group">-->
-<!--            <input type="text" class="form-control editInput" th:value="${postTitle}" name="newTitle">-->
-<!--            <small id="TitleHelp" class="form-text text-muted">Edit the Title of your post here</small>-->
-<!--        </div>-->
-<!--        <div class="form-group">-->
-<!--            <textarea type="text" name="newBody" class="form-control editTextArea" th:text="${postBody}"></textarea>-->
-<!--            <small id="BodyHelp" class="form-text text-muted">Edit the body of your post here</small>-->
-<!--        </div>-->
-<!--        <input type="hidden" name="id" th:value="${postId}">-->
-<!--        <button type="submit" class="btn btn-primary editPostButton">Submit</button>-->
-<!--    </form>-->
-<!--</div>-->
+    <!--    <form action="/posts/edit" method="post">-->
+    <!--        <div class="form-group">-->
+    <!--            <input type="text" class="form-control editInput" th:value="${postTitle}" name="newTitle">-->
+    <!--            <small id="TitleHelp" class="form-text text-muted">Edit the Title of your post here</small>-->
+    <!--        </div>-->
+    <!--        <div class="form-group">-->
+    <!--            <textarea type="text" name="newBody" class="form-control editTextArea" th:text="${postBody}"></textarea>-->
+    <!--            <small id="BodyHelp" class="form-text text-muted">Edit the body of your post here</small>-->
+    <!--        </div>-->
+    <!--        <input type="hidden" name="id" th:value="${postId}">-->
+    <!--        <button type="submit" class="btn btn-primary editPostButton">Submit</button>-->
+    <!--    </form>-->
+    <!--</div>-->
 
 
-    <form class="container bg-light" th:action="@{/posts/edit}" method="post" th:object="${post}">
-        <div class="row">
-            <div class="input-field col s6">
+    <form class="container bg-warning" th:action="@{/posts/edit}" method="post" th:object="${post}">
+        <div class="row container">
+            <div class="input-field ">
                 <label for="title">Title</label>
+                <br>
                 <input th:value="${post.title}" id="title" type="text" th:field="*{title}">
             </div>
-            <div class="input-field col s6">
+            <div class="input-field ">
                 <label for="description">Description</label>
-                <input th:value="${post.description}" id="description" type="text"
-                       th:field="*{description}">
+                <br>
+                <textarea th:value="${post.description}" id="description" type="text" rows="4" cols="50"
+                          th:field="*{description}"></textarea>
                 <input type="hidden" name="id" th:value="${post.id}">
             </div>
-            <div class="row">
-                <button class="btn btn-primary" type="submit" name="action">
-                    Submit
-                </button>
-            </div>
+            <button class="btn btn-primary" type="submit" name="action">
+                Submit
+            </button>
         </div>
     </form>
 </div>
-</div>
+
 
 
 </body>
