--- a/src/main/resources/templates/partials/navbar.html
+++ b/src/main/resources/templates/partials/navbar.html
@@ -6,21 +6,21 @@
 </head>
 <body>
 
-<nav th:fragment="navbar" class="navbar navbar-inverse navbar-fixed-top">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="/">home</a>
-        </div>
-        <div class="collapse navbar-collapse">
-            <ul class="nav navbar-nav pull-right">
-                <li class="active"><a href="/posts">Index</a></li>
-                <li><a href="/posts/create">Create</a></li>
-            </ul>
-        </div><!--/.nav-collapse -->
+<nav th:fragment="navbar" class="navbar dark navbar-inverse navbar-fixed-top">
+    <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="/">home</a>
+    </div>
+    <div class="collapse navbar-collapse">
+        <ul class="nav navbar-nav pull-right">
+            <li class="active"><a href="/posts">Index</a></li>
+            <li><a href="/posts/create">Create</a></li>
+        </ul>
+    </div><!--/.nav-collapse -->
 
 </nav>
 
