styling edit form

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,6 +3,7 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <th:block th:insert="partials/head :: head"></th:block>
+    <title>Home</title>
 </head>
 <body>
 <nav th:include="partials/navbar :: navbar"></nav>
