--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -1,63 +1,53 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
-    <link th:insert="partials/head :: head"></link>
-
-    <meta charset="UTF-8">
-    <title>Index</title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>
-    <link rel="stylesheet" href="../../static/css/springblog.css">
-    <script src="/webjars/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <th:block th:insert="partials/head :: head"></th:block>
+    <title>Create</title>
 </head>
 <body>
 <nav th:include="partials/navbar :: navbar"></nav>
 <div class="container d-flex">
     <h1 class="d-flex ml-auto bg-danger"> showing all posts index.html </h1>
-    <hr>
+
     <br><br>
+
     <div class="row">
-
         <div th:each="post : ${posts}" class="card col-4">
-            <div class="">
-                <a th:text="${post.title}" class="card-title"></a>
-                <div class="card-body ">
-                    <p th:text="${post.description}"></p>
-                </div>
 
-                <div class="row">
-                    <div class="col-4 bg-info">
-                        <a th:href="@{'/posts/'+${post.id}+'/details'}" class="btn ">
-                            <button>View Post</button>
-                        </a>
-                    </div>
-                    <div class="col-4">
-                        <form th:action="@{/posts/edit}" th:method="get" th:object="${post}">
-                            <input class="btn"type="hidden" name="id" th:value="${post.getId()}">
-                            <input type="submit" value="Edit This Post">
-                        </form>
-                    </div>
-                    <div class="col-4">
-                        <form action="/posts/delete" method="post">
-                            <input class="btn" type="hidden" name="postId" th:value="${post.getId()}">
-                            <input type="submit" value="Delete This Post">
-                        </form>
-                    </div>
-                </div>
-
+            <a th:text="${post.title}" class="card-title"></a>
+            <div class="card-body ">
+                <p th:text="${post.description}"></p>
             </div>
+
+            <div class="d-flex flex-nowrap">
+<!--                <div class="bg-info">-->
+                    <a th:href="@{'/posts/'+${post.id}+'/details'}" class="btn ">
+                        <button>View Post</button>
+                    </a>
+<!--                </div>-->
+<!--                <div class="">-->
+                    <form class="d-inline" th:action="@{/posts/edit}" th:method="get" th:object="${post}">
+                        <input class="btn" type="hidden" name="id" th:value="${post.getId()}">
+                        <input type="submit" value="Edit">
+                    </form>
+<!--                </div>-->
+<!--                <div class="">-->
+                    <form class="d-inline" action="/posts/delete" method="post">
+                        <input class="btn" type="hidden" name="postId" th:value="${post.getId()}">
+                        <input type="submit" value="Delete">
+                    </form>
+<!--                </div>-->
+            </div>
+
         </div>
     </div>
-    <br>
-    <hr>
-    <br>
+
+    <br><br>
+
     <div th:each="user : ${users}">
         <h3 th:text="${user.username}"></h3>
         <h3 th:text="${user.email}"></h3>
     </div>
-
 </div>
-</div>
-
 </body>
 </html>
