adding comments to email service

--- a/src/main/resources/static/css/springblog.css
+++ b/src/main/resources/static/css/springblog.css
@@ -43,6 +43,10 @@ body {
   border-bottom: 1px solid blue;
   min-height: 200px;
 }
+.btn-div{
+  margin-top: auto;
+}
+
 form{
   display: inline !important;
 }
