--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -11,15 +11,14 @@
 
     <br><br>
 
-    <div class="row">
-        <div th:each="post : ${posts}" class="card col-4">
-
+    <div class="d-flex flex-nowrap">
+        <div th:each="post : ${posts}" class="card col-4 d-inline">
             <a th:text="${post.title}" class="card-title"></a>
             <div class="card-body ">
                 <p th:text="${post.description}"></p>
             </div>
 
-            <div class="d-flex flex-nowrap">
+            <div class="d-flex flex-nowrap btn-div">
 <!--                <div class="bg-info">-->
                     <a th:href="@{'/posts/'+${post.id}+'/details'}" class="btn ">
                         <button>View Post</button>
