added images to post cards

--- a/src/main/resources/templates/posts/show.html
+++ b/src/main/resources/templates/posts/show.html
@@ -26,13 +26,13 @@
 
 </div>
 
-<!--<div style="display: flex; flex-wrap: wrap">-->
-<!--    <div th:each="image : ${post.images}">-->
-<!--        <div>-->
-<!--            <img th:src="${image.url}" style="height: 300px; margin-left: 10px; margin-right: 10px;"/>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</div>-->
+<div style="display: flex; flex-wrap: wrap">
+    <div th:each="image : ${post.images}">
+        <div>
+            <img th:src="${image.url}" style="height: 300px; margin-left: 10px; margin-right: 10px;"/>
+        </div>
+    </div>
+</div>
 
 
 </body>
