--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -12,13 +12,19 @@
     <br><br>
 
     <div class="d-flex flex-nowrap">
-        <div th:each="post : ${posts}" class="card col-4 d-inline">
+        <div th:each="post : ${posts}" class="card col-3 d-inline">
             <a th:text="${post.title}" class="card-title"></a>
             <div class="card-body ">
                 <p th:text="${post.description}"></p>
             </div>
-
-            <div class="d-flex flex-nowrap btn-div">
+            <div style="display: flex; margin: auto">
+                <div th:each="image : ${post.images}">
+                    <div>
+                        <img th:src="${image.url}" style="height: 200px; margin: auto"/>
+                    </div>
+                </div>
+            </div>
+            <div class="d-flex flex-nowrap btn-div justify-content-around">
 <!--                <div class="bg-info">-->
                     <a th:href="@{'/posts/'+${post.id}+'/details'}" class="btn ">
                         <button>View Post</button>
