--- a/src/main/resources/static/css/springblog.css
+++ b/src/main/resources/static/css/springblog.css
@@ -11,18 +11,21 @@ body {
 /*  justify-content: center;*/
 /*}*/
 
-.navbar{
-  background-color: cadetblue;
+nav{
+  background-color: lightblue;
 }
 
 .navbar-brand {font-size: 30px;}
-.navbar-toggle {margin: 13px 15px 13px 0;}
+.navbar-toggle {margin: 15px 15px 15px 0;}
 
-.navbar a {
-  font-size: 18px;
+.navbar li {
   padding-bottom: 20px !important;
   padding-top: 20px !important;
   transition: all 0.3s ease;
+
+}
+.navbar .btn-link {
+  font-size: 22px;
 }
 
 /*Cards*/
