edit post is functional

--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -30,7 +30,7 @@
                     <button>View Post</button>
                 </a>
                 <!--edit post-->
-                <a th:href="@{'/posts/edit/'+${post.id}}" class="btn" th:method="get" th:value="${post.getId()}">
+                <a th:href="@{'/posts/edit/'+${post.id}}" class="btn">
                     <button>Edit Post</button>
                 </a>
                 <!--delete post-->
