--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <nav th:include="partials/navbar :: navbar"></nav>
-<div class="container d-flex">
+<div class="d-flex">
     <h1 class="d-flex ml-auto bg-danger"> showing all posts index.html </h1>
 
     <br><br>
@@ -26,7 +26,7 @@
             </div>
             <div class="d-flex flex-nowrap btn-div justify-content-around">
                 <!--view post-->
-                <a th:href="@{'/posts/'+${post.id}+'/details'}" class="btn ">
+                <a th:href="@{'/posts/details'+${post.id}}" class="btn ">
                     <button>View Post</button>
                 </a>
                 <!--edit post-->
@@ -34,7 +34,7 @@
                     <button>Edit Post</button>
                 </a>
                 <!--delete post-->
-                <a th:href="@{'/posts/delete/'+ ${post.id}}" class="btn" th:value="${post.getId()}">
+                <a th:href="@{'/posts/delete/'+ ${post.id}}" class="btn">
                     <button>Delete Post</button>
                 </a>
             </div>
