working on diplaying user home page

--- a/src/main/resources/templates/partials/navbar.html
+++ b/src/main/resources/templates/partials/navbar.html
@@ -19,6 +19,11 @@
     <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav pull-right">
             <li class="d-flex align-items-center mx-2">
+                <a th:href="@{'/create-user'}">
+                    <button style="border:none !important" class="btn-link btn p-0">Sign Up</button>
+                </a>
+            </li>
+            <li class="d-flex align-items-center mx-2">
                 <a th:href="@{/posts}">
                     <button style="border:none !important" class="btn-link btn p-0">Index</button>
                 </a>
