--- a/src/main/resources/templates/users/edit-user.html
+++ b/src/main/resources/templates/users/edit-user.html
@@ -30,8 +30,8 @@
                 </div>
                 <div class="row">
                     <div class="input-field col s6">
-                        <input type="text"
-                               id="password" class="validate" th:field="*{password}" th:value="${user.password}">
+                        <input type="password"
+                               id="password" class="validate" th:field="*{password}">
                         <label for="password">password</label>
                     </div>
                 </div>
