--- a/src/main/resources/templates/users/create-user.html
+++ b/src/main/resources/templates/users/create-user.html
@@ -5,53 +5,54 @@
     <title>create-user</title>
 </head>
 <body>
-    <nav th:include="partials/navbar :: navbar"></nav>
+<nav th:include="partials/navbar :: navbar"></nav>
 <h1>Create an account</h1>
 <div class="wrapper">
-<!--<form th:action="@{/create-user}" method="POST" th:object="${user}">-->
-<!--    <label for="username">Username</label>-->
-<!--    <input id="username" th:field="*{username}" />-->
+    <!--<form th:action="@{/create-user}" method="POST" th:object="${user}">-->
+    <!--    <label for="username">Username</label>-->
+    <!--    <input id="username" th:field="*{username}" />-->
 
-<!--    <label for="email">Email</label>-->
-<!--    <input id="email" th:field="*{email}" />-->
+    <!--    <label for="email">Email</label>-->
+    <!--    <input id="email" th:field="*{email}" />-->
 
-<!--    <label for="password">Password</label>-->
-<!--    <input id="password" type="password" th:field="*{password}" />-->
+    <!--    <label for="password">Password</label>-->
+    <!--    <input id="password" type="password" th:field="*{password}" />-->
 
-<!--    <input value="Sign me up!" type="submit" />-->
-<!--</form>-->
+    <!--    <input value="Sign me up!" type="submit" />-->
+    <!--</form>-->
 
 
-<div class="row">
-    <form class="col-12" th:action="@{/create-user}" method="post" th:object="${user}">
-        <div class="row">
-            <div class="input-field col-6">
-                <input placeholder="Cats12" id="username" type="text" class="validate" th:field="*{username}" >
-                <label for="username">Username</label>
-            </div>
-
+    <div class="row">
+        <form class="col-12" th:action="@{/create-user}" method="post" th:object="${user}">
             <div class="row">
                 <div class="col-6">
-                    <input type="text" placeholder="cat@mail.com"
-                           id="email" class="validate" th:field="*{email}">
-                    <label for="email">Email</label>
+                    <input placeholder="Create Username" id="username" type="text" class="validate"
+                           th:field="*{username}">
+                    <label for="username">Username</label>
+                </div>
+
+                <div class="row">
+                    <div class="col-6">
+                        <input type="text" placeholder="Enter Email Address"
+                               id="email" class="validate" th:field="*{email}">
+                        <label for="email">Email</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-6">
+                        <input type="password" placeholder=""
+                               id="password" class="validate" th:field="*{password}">
+                        <label for="password">password</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <button class="btn" type="submit" name="action">
+                        Submit
+                    </button>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-6">
-                    <input type="text" placeholder="*****"
-                           id="password" class="validate" th:field="*{password}">
-                    <label for="password">password</label>
-                </div>
-            </div>
-            <div class="row">
-                <button class="btn" type="submit" name="action">
-                    Submit
-                </button>
-            </div>
-        </div>
-    </form>
-</div>
+        </form>
+    </div>
 
 
 </body>
