--- a/src/main/resources/templates/users/single.html
+++ b/src/main/resources/templates/users/single.html
@@ -16,7 +16,7 @@
             </div>
             <!--            action-->
             <div class="card-action">
-                <a class="waves-effect waves-light btn pink lighten-4"
+                <a class=""
                    th:href="@{'/user/edit/'+ ${user.id}}">
                     Edit Profile</a>
                 <!-- Modal Trigger -->
